Fixed some layout issues

--- a/app/component/messages/_messages.scss
+++ b/app/component/messages/_messages.scss
@@ -5,4 +5,5 @@
   color: $white;
   padding: 2vw;
   overflow: auto;
+  font-size: 3vw;
 }
